Bug 310488 - Deleting mail folder via context menu can delete incorrect folder
Summary: Deleting mail folder via context menu can delete incorrect folder
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.9.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-22 10:46 UTC by Oliver Wilson
Modified: 2012-11-22 12:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Wilson 2012-11-22 10:46:11 UTC
Deleting a folder via the context menu doesn't work as expected; see repro steps.

Reproducible: Always

Steps to Reproduce:
Right-click on a mail folder you wish to delete.
Select "Delete Folder".
If, like me, you are trying to delete a remote folder, this will take an age, so carry on with your life whilst you await the delete confirmation.
Select some other folder which you wish to work on in the meantime (and indeed NOT delete).
When the confirmation dialog appears, you will be asked about deleting the newly selected folder, NOT the one you wished originally to delete!

For full repro, blithely ignore the confirmation dialog, and irrevocably delete all of your important emails.
Actual Results:  
KMail deletes 3 years of my emails.

Expected Results:  
KMail does NOT delete 3 years of my emails.
Comment 1 Laurent Montel 2012-11-22 11:00:15 UTC
Will look at soon.
Comment 2 Oliver Wilson 2012-11-22 11:41:25 UTC
Cool, thanks.
Actually, I'm less stressed now as I've managed to recover my lost emails through some Exchange quirk :-)
This incident has certainly taught me a lesson about reading confirmation dialogs more thoroughly!
Comment 3 Laurent Montel 2012-11-22 12:19:15 UTC
Git commit d3adcd4338c51fb7004037129e3cbc8a6c6def01 by Montel Laurent.
Committed on 22/11/2012 at 13:18.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug310488 - Deleting mail folder via context menu can delete

incorrect folder

FIXED-IN: 4.9.4

M  +16   -12   kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/d3adcd4338c51fb7004037129e3cbc8a6c6def01
Comment 4 Laurent Montel 2012-11-22 12:20:27 UTC
(In reply to comment #2)
> Cool, thanks.
> Actually, I'm less stressed now as I've managed to recover my lost emails
> through some Exchange quirk :-)

I hope that you will able to restore it
Sorry for the bug.

> This incident has certainly taught me a lesson about reading confirmation
> dialogs more thoroughly!

Thanks for reporting bug.