Fix Bug310488 - Deleting mail folder via context menu can delete

incorrect folder

FIXED-IN: 4.9.4
BUG: 310488