kmmainwidget.cpp
@@ -1737,8 +1737,9 @@ void KMMainWidget::slotRemoveFolder()
   if ( mCurrentFolder->isSystemFolder() ) return;
   if ( mCurrentFolder->isReadOnly() ) return;
 
-  Akonadi::CollectionFetchJob *job = new Akonadi::CollectionFetchJob( mCurrentFolder->collection(), CollectionFetchJob::Recursive, this );
+  Akonadi::CollectionFetchJob *job = new Akonadi::CollectionFetchJob( mCurrentFolder->collection(), CollectionFetchJob::FirstLevel, this );
   job->fetchScope().setContentMimeTypes( QStringList() << KMime::Message::mimeType() );
+  job->setProperty( "collectionId", mCurrentFolder->collection().id() );
   connect( job, SIGNAL(result(KJob*)), SLOT(slotDelayedRemoveFolder(KJob*)) );
 }
 
@@ -1748,33 +1749,34 @@ void KMMainWidget::slotDelayedRemoveFolder( KJob *job )
   Akonadi::Collection::List listOfCollection = fetchJob->collections();
   const bool hasNotSubDirectory = listOfCollection.isEmpty();
 
+  const Akonadi::Collection::Id id = fetchJob->property( "collectionId" ).toLongLong();
+  Akonadi::Collection col = MailCommon::Util::updatedCollection(CommonKernel->collectionFromId( id ));
   QDir dir;
   QString str;
   QString title;
   QString buttonLabel;
-
-  if ( mCurrentFolder->collection().resource() == QLatin1String( "akonadi_search_resource" ) ) {
+  if ( col.resource() == QLatin1String( "akonadi_search_resource" ) ) {
     title = i18n("Delete Search");
     str = i18n("<qt>Are you sure you want to delete the search <b>%1</b>?<br />"
                 "Any messages it shows will still be available in their original folder.</qt>",
-             Qt::escape( mCurrentFolder->name() ) );
+             Qt::escape( col.name() ) );
     buttonLabel = i18nc("@action:button Delete search", "&Delete");
   } else {
     title = i18n("Delete Folder");
 
 
-    if ( mCurrentFolder->count() == 0 ) {
+    if ( col.statistics().count() == 0 ) {
       if ( hasNotSubDirectory ) {
         str = i18n("<qt>Are you sure you want to delete the empty folder "
                    "<b>%1</b>?</qt>",
-                Qt::escape( mCurrentFolder->name() ) );
+                Qt::escape( col.name() ) );
       } else {
         str = i18n("<qt>Are you sure you want to delete the empty folder "
                    "<resource>%1</resource> and all its subfolders? Those subfolders might "
                    "not be empty and their contents will be discarded as well. "
                    "<p><b>Beware</b> that discarded messages are not saved "
                    "into your Trash folder and are permanently deleted.</p></qt>",
-                Qt::escape( mCurrentFolder->name() ) );
+                Qt::escape( col.name() ) );
       }
     } else {
       if ( hasNotSubDirectory ) {
@@ -1782,13 +1784,13 @@ void KMMainWidget::slotDelayedRemoveFolder( KJob *job )
                    "<resource>%1</resource>, discarding its contents? "
                    "<p><b>Beware</b> that discarded messages are not saved "
                    "into your Trash folder and are permanently deleted.</p></qt>",
-                Qt::escape( mCurrentFolder->name() ) );
+                Qt::escape( col.name() ) );
       }else {
         str = i18n("<qt>Are you sure you want to delete the folder <resource>%1</resource> "
                    "and all its subfolders, discarding their contents? "
                    "<p><b>Beware</b> that discarded messages are not saved "
                    "into your Trash folder and are permanently deleted.</p></qt>",
-              Qt::escape( mCurrentFolder->name() ) );
+              Qt::escape( col.name() ) );
       }
     }
     buttonLabel = i18nc("@action:button Delete folder", "&Delete");
@@ -1800,11 +1802,13 @@ void KMMainWidget::slotDelayedRemoveFolder( KJob *job )
                                            KMessageBox::Notify | KMessageBox::Dangerous )
       == KMessageBox::Continue )
   {
-    kmkernel->checkFolderFromResources( listOfCollection<<mCurrentFolder->collection() );
+    kmkernel->checkFolderFromResources( listOfCollection<<col );
 
-    Akonadi::CollectionDeleteJob *job = new Akonadi::CollectionDeleteJob( mCurrentFolder->collection() );
+    if(col.id() == mCurrentFolder->collection().id())
+      mCurrentFolder.clear();
+
+    Akonadi::CollectionDeleteJob *job = new Akonadi::CollectionDeleteJob( col );
     connect( job, SIGNAL(result(KJob*)), this, SLOT(slotDeletionCollectionResult(KJob*)) );
-    mCurrentFolder.clear();
   }
 }
 
